tdf#158720 Fix crash when searching expert config with gen vcl plugin

Change-Id: Ida2f17c8dfb638bb6791dba32ae3b190b06254de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160920
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>